[gd_scene load_steps=3 format=3 uid="uid://d0rbixkdrpy8c"]

[ext_resource type="PackedScene" uid="uid://b5guytyy41qsc" path="res://Menus/transitioner/transitioner.tscn" id="1_xaa5a"]
[ext_resource type="Script" uid="uid://bdwxivhx5lc7h" path="res://Menus/main_menu/buttons.gd" id="2_61qpf"]

[node name="MainMenu" type="Node2D"]

[node name="Transitioner" parent="." instance=ExtResource("1_xaa5a")]
z_index = 1000
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Buttons" type="Control" parent="." node_paths=PackedStringArray("transitioner")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_61qpf")
transitioner = NodePath("../Transitioner")

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Start Game!"

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings
"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -31.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Buttons/Start" to="Buttons" method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="Buttons" method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="Buttons" method="_on_quit_pressed"]
